--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.683.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mime": "^2.4.5"
   }
 }
